Fix navigation links to use relative paths for GitHub Pages compatibility

--- a/src/room-2.html
+++ b/src/room-2.html
@@ -132,7 +132,7 @@
             if (allWordsPresent) {
                 successMessage.style.display = 'block';
                 setTimeout(() => {
-                    window.location.href = 'room-3.html';
+                    window.location.href = './room-3.html';
                 }, 3000);
             }
         }
