--- a/src/room-3.html
+++ b/src/room-3.html
@@ -13,7 +13,7 @@
             // Assuming there's a game or interaction in room-3.html that leads to room-3.5.html
             // For demonstration, let's add a simple click event to trigger the redirection
             document.querySelector('.centered-text').addEventListener('click', () => {
-                window.location.href = 'room-3.5.html';
+                window.location.href = './room-3.5.html';
             });
         });
     </script>
