--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0;url=./dist/index.html">
+    <title>Start</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -26,16 +25,22 @@
         a {
             color: #0366d6;
             text-decoration: none;
+            font-size: 1.2rem;
+            padding: 0.5rem 1rem;
+            background-color: #f0f0f0;
+            border-radius: 4px;
+            transition: background-color 0.2s;
         }
         a:hover {
-            text-decoration: underline;
+            background-color: #e0e0e0;
+            text-decoration: none;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Redirecting to the application...</h1>
-        <p>If you are not redirected automatically, <a href="./dist/index.html">click here</a>.</p>
+        <h1>Porque te amo</h1>
+        <p><a href="./escape-room.html">Start the Escape Room</a></p>
     </div>
 </body>
 </html>
