--- a/src/room-4.html
+++ b/src/room-4.html
@@ -12,7 +12,7 @@
             const centeredText = document.querySelector('.centered-text');
             if (centeredText) {
                 centeredText.addEventListener('click', () => {
-                    window.location.href = 'room-4.5.html';
+                    window.location.href = './room-4.5.html';
                 });
             }
         });
