Configure root index.html to redirect to src/index.html and update static.yml for correct deployment path

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 </head>
 <body class="start-page">
     <div class="centered-text">Porque te amo</div>
+    <button id="startButton">Start the Escape Room</button>
 </body>
         </div>
     </footer>
