--- a/index.html
+++ b/index.html
@@ -1,46 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Start</title>
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f5f5f5;
-            color: #333;
-        }
-        .container {
-            text-align: center;
-            padding: 2rem;
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        a {
-            color: #0366d6;
-            text-decoration: none;
-            font-size: 1.2rem;
-            padding: 0.5rem 1rem;
-            background-color: #f0f0f0;
-            border-radius: 4px;
-            transition: background-color 0.2s;
-        }
-        a:hover {
-            background-color: #e0e0e0;
-            text-decoration: none;
-        }
-    </style>
+    <meta http-equiv="refresh" content="0; url=./src/index.html" />
 </head>
 <body>
-    <div class="container">
-        <h1>Porque te amo</h1>
-        <p><a href="./escape-room.html">Start the Escape Room</a></p>
-    </div>
+    <p>Redirecting to <a href="./src/index.html">src/index.html</a></p>
 </body>
 </html>
