--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,8 @@
     <title>Start</title>
     <link rel="stylesheet" href="./styles/main.css">
 </head>
-<body class="start-page">
+<body class="start-page" onclick="startGame()">
     <div class="centered-text">Porque te amo</div>
-    <button id="startButton">Start the Escape Room</button>
 </body>
         </div>
     </footer>
