"Directly redirect to escape-room.html on index.html body click and remove startGame function"

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Start</title>
     <link rel="stylesheet" href="./styles/main.css">
 </head>
-<body class="start-page" onclick="startGame()">
+<body class="start-page" onclick="window.location.href = './escape-room.html';">
     <div class="centered-text">Porque te amo</div>
 </body>
         </div>
