--- a/src/escape-room.html
+++ b/src/escape-room.html
@@ -129,9 +129,9 @@
 </head>
 <body>
     <div class="room-container">
-        <img src="assets/room_1.gif" alt="Room 1" class="background">
+        <img src="./assets/room_1.gif" alt="Room 1" class="background">
         <button class="table-button" onclick="activateZoom()"></button>
-        <img src="assets/love.png" alt="Sticky Notes" class="sticky-notes">
+        <img src="./assets/love.png" alt="Sticky Notes" class="sticky-notes">
         <div class="answer-table">
             <div class="answer-row"><span class="answer-label">1.-</span><input type="text" class="answer-input" maxlength="1"></div>
             <div class="answer-row"><span class="answer-label">2.-</span><input type="text" class="answer-input" maxlength="1"></div>
