--- a/src/escape-room.html
+++ b/src/escape-room.html
@@ -19,7 +19,7 @@
 <body>
     <div class="room-container">
         <img src="assets/room_1.gif" alt="Room 1" class="background">
-        <button class="table-button" onclick="activateZoom()"></button>
+        <button id="table-button" class="table-button"></button>
         <img src="assets/love.png" alt="Sticky Notes" class="sticky-notes">
         <div class="answer-table">
             <div class="answer-row"><span class="answer-label">1.-</span><input type="text" class="answer-input" maxlength="1"></div>
@@ -31,7 +31,7 @@
             <div class="answer-row"><span class="answer-label">7.-</span><input type="text" class="answer-input" maxlength="1"></div>
             <div class="answer-row"><span class="answer-label">8.-</span><input type="text" class="answer-input" maxlength="1"></div>
             <div class="answer-row"><span class="answer-label">9.-</span><input type="text" class="answer-input" maxlength="1"></div>
-            <button class="check-button" onclick="checkAnswer()">Check Answer</button>
+            <button class="check-button">Check Answer</button>
         </div>
     </div>
 </body>
