Refactor to use onload event for initialization

--- a/src/escape-room.html
+++ b/src/escape-room.html
@@ -16,7 +16,7 @@
         }
     </style>
 </head>
-<body>
+<body onload="initializeEscapeRoom()">
     <div class="room-container">
         <img src="assets/room_1.gif" alt="Room 1" class="background">
         <button id="table-button" class="table-button"></button>
