Fix zoom functionality and table-button interaction

--- a/src/escape-room.html
+++ b/src/escape-room.html
@@ -15,8 +15,9 @@
             overflow: hidden;
         }
     </style>
+    <script src="js/escape-room.js" type="module"></script>
 </head>
-<body onload="initializeEscapeRoom()">
+<body>
     <div class="room-container">
         <img src="assets/room_1.gif" alt="Room 1" class="background">
         <button id="table-button" class="table-button"></button>
